Fixed a race condition in the tuio to javascript code, added support for recognizing geometries in tuio 1.1, added blob class that encapsulates tuiocursors and tuioblobs, added sample code for recognizing unknown objects' geometries

--- a/src/server/WebRoot/apps/Water/index.html
+++ b/src/server/WebRoot/apps/Water/index.html
@@ -16,6 +16,7 @@
     	document.addEventListener('GLAZoomCompleted', onGLAZoomCompleted, false);
 		function onGLALoad(event) {
 		  GLA.SetTuioEnabled(true);
+		  GLA.SetMenuButtons(["close"]);
 		}
 		function onGLAZoomCompleted(event) {
 
