--- a/src/server/WebRoot/apps/Sketchout/index.html
+++ b/src/server/WebRoot/apps/Sketchout/index.html
@@ -6,7 +6,7 @@
 <script>
 document.addEventListener('GLALoad', onGLALoad, false);
 function onGLALoad(event) {
-	location.href='http://multiplayerchess.com/#!/singleplayer';
+	location.href='http://sketch-out.appspot.com/';
 }
 </script>
 </body>
