Added scroll on pinch API, updated maps example to use the new API

--- a/src/server/WebRoot/apps/Test/index.html
+++ b/src/server/WebRoot/apps/Test/index.html
@@ -6,6 +6,7 @@
 	function onGLALoad(event) {
 	  event.preventDefault();
 	  GLA.SetScrollOnTouchMove(true);
+	  location.href = "http://slides.html5rocks.com/#speech-input";
 	}
 </script>
 </head>
