--- a/src/server/WebRoot/apps/Maps/index.html
+++ b/src/server/WebRoot/apps/Maps/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>Map</title>
     <script id="microloader" type="text/javascript" src="microloader/development.js"></script>
+    <script>
+	document.addEventListener('GLALoad', onGLALoad, false);
+	function onGLALoad(event) {
+	  event.preventDefault();
+	  GLA.SetScrollOnPinch(true);
+      GLA.SetMenuButtons(["close", "maximize", "restore"]);
+	}
+    </script>
 </head>
 <body>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
